--- a/SchoolManagmentApp/messagesApp/templates/inbox.html
+++ b/SchoolManagmentApp/messagesApp/templates/inbox.html
@@ -54,7 +54,7 @@ my_tags %} {% block title%} SchoolManagmentApp {% endblock title %}
 						<tbody class="">
 							{% for email in page_obj%}
 							{%if email.is_read_receiver%}
-								<tr class="">
+								<tr class="email-list">
 									<td class="text-center text-white text-decoration-none">
 										<a href="{%url 'email_is_important' email.id %}?source=inbox">
 											{%if email.is_important%}
@@ -85,7 +85,7 @@ my_tags %} {% block title%} SchoolManagmentApp {% endblock title %}
 									{%endif%}
 								</tr>
 								{%else%}
-								<tr class="bolded">
+								<tr class="email-list bolded">
 									<td class="text-center text-white text-decoration-none">
 										<a href="{%url 'email_is_important' email.id %}?source=inbox">
 										{%if email.is_important%}
